[package]
name = "cargo-subcommand"
version = "0.4.9"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Library for creating cargo subcommands."
repository = "https://github.com/dvc94ch/cargo-subcommand"
license = "ISC"

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
